--- a/src/app/admin/products/components/add-product/add-product.component.scss
+++ b/src/app/admin/products/components/add-product/add-product.component.scss
@@ -10,3 +10,8 @@ $color-warning:#bd2227;
         }
     }
 }
+.advance_btn{
+    background-color: rgba($color-primary, 1);
+    color: #fff;
+    border: 1px solid $color-primary;
+}
