--- a/src/app/admin/orders/components/new-order/new-order.component.html
+++ b/src/app/admin/orders/components/new-order/new-order.component.html
@@ -80,19 +80,30 @@
                                                     <mat-icon>add_circle_outline</mat-icon>
                                                 </button>
                                                 <div class="input_add_box">
-                                                    <div class="d-flex mb-5">
-                                                        <mat-slide-toggle *ngIf="selectedOrderType?.tableRequired" [(ngModel)]="item.isParcel" [ngModelOptions]="{standalone: true}"  color="accent" class="mr-10">Parcel?</mat-slide-toggle>
-                                                        <div class="input-group mb-0 ml-auto number_input item_btn">
-                                                            <div class="input-group-prepend">
-                                                                <button class="btn btn-outline-secondary" type="button" (click)="handleOrderQuantityInput(item, 'prev')">-</button>
-                                                            </div>
-                                                            <input type="text" class="form-control" digitOnly  [(ngModel)]="item.quantity" [ngModelOptions]="{standalone: true}"  (change)="handleOrderQuantityInput(item, 'change')">
-                                                            <div class="input-group-append">
-                                                                <button class="btn btn-outline-secondary" type="button" (click)="handleOrderQuantityInput(item, 'next')">+</button>
+
+                                                            <mat-form-field appearance="outline" class="ew-100 variation_select" *ngIf="item.advanced_pricing.length > 0">
+                                                                <mat-select [(ngModel)]="item.advancedPriceId" [ngModelOptions]="{standalone: true}" (selectionChange)="handleProductPriceChange(item)">
+                                                                    <ng-container *ngFor="let tt of item.advanced_pricing;">
+                                                                        <mat-option [value]="tt.id"> {{tt.title}} </mat-option>
+                                                                    </ng-container>
+                                                                    
+                                                                </mat-select>
+                                                            </mat-form-field>
+
+                                                          <div class="d-flex mb-5">
+                                                            <mat-slide-toggle *ngIf="selectedOrderType?.tableRequired" [(ngModel)]="item.isParcel" [ngModelOptions]="{standalone: true}"  color="accent" class="mr-10">Parcel?</mat-slide-toggle>
+                                                            <div class="input-group mb-0 ml-auto number_input item_btn">
+                                                                <div class="input-group-prepend">
+                                                                    <button class="btn btn-outline-secondary" type="button" (click)="handleOrderQuantityInput(item, 'prev')">-</button>
+                                                                </div>
+                                                                <input type="text" class="form-control" digitOnly  [(ngModel)]="item.quantity" [ngModelOptions]="{standalone: true}"  (change)="handleOrderQuantityInput(item, 'change')">
+                                                                <div class="input-group-append">
+                                                                    <button class="btn btn-outline-secondary" type="button" (click)="handleOrderQuantityInput(item, 'next')">+</button>
+                                                                </div>
                                                             </div>
                                                         </div>
-                                                    </div>
-                                                    <button type="button" (click)="onAddItem(element, item)" mat-stroked-button color="primary" class="product_addBtn ew-100 small_btn"><mat-icon>add</mat-icon> Add</button>
+                                                    
+                                                    <button type="button" (click)="onAddItem(element, item)" mat-flat-button color="primary" class="product_addBtn ew-100 small_btn"><mat-icon>add</mat-icon> Add</button>
                                                 </div>
                                             </div>
                                         </label>
@@ -186,7 +197,8 @@
                                         <div class="col">
                                             <div class="order_item_card">
                                                 <div class="order-details col">
-                                                    <p class="product_name">{{ item.get('productName').value }} <span class="order_item_card_strip" *ngIf="item.get('isParcel').value">Parcel</span></p>
+                                                    <p class="product_name">{{ item.get('productName').value }} <ng-container *ngIf="item.get('advancedPriceTitle').value">({{item.get('advancedPriceTitle').value}})</ng-container>
+                                                     <span class="order_item_card_strip" *ngIf="item.get('isParcel').value">Parcel</span></p>
                                                     <p class="product_price">
                                                         <small>Price: &nbsp;&nbsp;&nbsp;</small>
                                                         <span>{{ item.get('price').value | currency  }}</span>
@@ -211,9 +223,9 @@
                                                             <button class="btn btn-outline-secondary" type="button" (click)="handleNumberControl(item, 'next', i)">+</button>
                                                         </div>
                                                     </div>
-                                                    <div class="d-flex mt-15">
+                                                    <div class="d-flex mt-15" *ngIf="item.get('id').value">
                                                         <p class="text-success px-2 mb-0">Served: <b>{{ item.get('servedItems').value }}</b></p>
-                                                        <p class="text-accent px-2 mb-0">Kitchen: <b>{{ item.get('quantity').value - item.get('servedItems').value - item.get('productionRejectedQuantity').value}}</b></p>
+                                                        <p class="text-accent px-2 mb-0">Kitchen: <b>{{ item.get('productionAcceptedQuantity').value - item.get('servedItems').value - item.get('productionRejectedQuantity').value}}</b></p>
                                                         <p class="text-primary px-2 mb-0">Ready: <b>{{ item.get('productionReadyQuantity').value - item.get('servedItems').value}}</b></p>
                                                         <p class="text-danger pl-2 mb-0">Rejected: <b>{{ item.get('productionRejectedQuantity').value }}</b></p>
                                                     </div>
