--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1827,3 +1827,12 @@ label.mat-checkbox-layout {
         }
     }
 }
+
+.tabBox{
+    .mat-tab-label{
+        font-size: 2.2rem;
+        font-weight: 500;
+        opacity: 1;
+        width: 20%;
+    }
+}
