--- a/src/app/kitchen/kitchen.component.html
+++ b/src/app/kitchen/kitchen.component.html
@@ -1,12 +1,13 @@
 <app-kitchen-header></app-kitchen-header>
-<mat-sidenav-container (backdropClick)="_layout.isOpened=false" [class.menu-close]="!_layout.isOpened && _layout.menuMode == 'side'">
+<router-outlet></router-outlet>
+<!-- <mat-sidenav-container (backdropClick)="_layout.isOpened=false" [class.menu-close]="!_layout.isOpened && _layout.menuMode == 'side'">
     <mat-sidenav-content class="tab_min_height">
-        <router-outlet></router-outlet>
+        
     </mat-sidenav-content>
     <mat-sidenav position="end" [(opened)]="_layout.isOpened">
         <app-consolidated-kitchen></app-consolidated-kitchen>
     </mat-sidenav>
-</mat-sidenav-container>
+</mat-sidenav-container> -->
 
 <!-- <div class="container-fluid  pa-20">
 
