--- a/src/app/admin/account-management/account-reports/custom-report/custom-report.component.html
+++ b/src/app/admin/account-management/account-reports/custom-report/custom-report.component.html
@@ -120,10 +120,10 @@
                             {{ item.transactionRefNumber }}
                         </td>
                         <td>
-                            <span *ngIf="item.transactionType == 'Sales'" class="tag sales">Sales</span>
-                            <span *ngIf="item.transactionType == 'Purchase'" class="tag purchase">Purchase</span>
-                            <span *ngIf="item.transactionType == 'Payment'" class="tag payment">Payment</span>
-                            <span *ngIf="item.transactionType == 'Receipt'" class="tag recipt">Receipt</span>
+                            <span *ngIf="item.transactionType == 'sales'" class="tag sales">Sales</span>
+                            <span *ngIf="item.transactionType == 'purchase'" class="tag purchase">Purchase</span>
+                            <span *ngIf="item.transactionType == 'payment'" class="tag payment">Payment</span>
+                            <span *ngIf="item.transactionType == 'receipt'" class="tag recipt">Receipt</span>
                         </td>
                         <td>
                             {{ item.description }}
