--- a/src/app/admin/account-management/dashboard/dashboard.component.html
+++ b/src/app/admin/account-management/dashboard/dashboard.component.html
@@ -81,10 +81,10 @@
 							<li class="d-flex" (dblclick)="openTransaction(item)">
 								<div class="list_left flex-fill pr-15">
 									<h4 class="text-primary d-flex align-items-center mb-5">
-                                        <span *ngIf="item.transactionType == 'Sales'" class="tag sales">Sales</span>
-                                        <span *ngIf="item.transactionType == 'Purchase'" class="tag purchase">Purchase</span>
-                                        <span *ngIf="item.transactionType == 'Payment'" class="tag payment">Payment</span>
-                                        <span *ngIf="item.transactionType == 'Receipt'" class="tag recipt">Receipt</span>
+                                        <span *ngIf="item.transactionType == 'sales'" class="tag sales">Sales</span>
+                                        <span *ngIf="item.transactionType == 'purchase'" class="tag purchase">Purchase</span>
+                                        <span *ngIf="item.transactionType == 'payment'" class="tag payment">Payment</span>
+                                        <span *ngIf="item.transactionType == 'receipt'" class="tag recipt">Receipt</span>
 										#{{ item.transactionRefNumber}}</h4>
 									<p>{{ item.description?item.description:'No Description Added'}}</p>
 								</div>
