--- a/src/app/admin/account-management/transaction-history/transaction-history.component.html
+++ b/src/app/admin/account-management/transaction-history/transaction-history.component.html
@@ -52,15 +52,15 @@
                                     </td>
                                     <td>{{ item.transactionDate | datex: 'DD-MM-YYYY' }}</td>
                                     <td>
-                                        <span *ngIf="item.transactionType == 'Sales' || item.transactionType == 'Receipt'" class="text-muted">To : </span>
-                                        <span *ngIf="item.transactionType == 'Purchase' || item.transactionType == 'Payment'" class="text-muted">From : </span>
+                                        <span *ngIf="item.transactionType == 'sales' || item.transactionType == 'receipt'" class="text-muted">To : </span>
+                                        <span *ngIf="item.transactionType == 'purchase' || item.transactionType == 'payment'" class="text-muted">From : </span>
                                         {{ item.ledger_account.ledgerName }}
                                     </td>
                                     <td>
-                                        <span *ngIf="item.transactionType == 'Sales'" class="tag sales">Sales</span>
-                                        <span *ngIf="item.transactionType == 'Purchase'" class="tag purchase">Purchase</span>
-                                        <span *ngIf="item.transactionType == 'Payment'" class="tag payment">Payment</span>
-                                        <span *ngIf="item.transactionType == 'Receipt'" class="tag recipt">Receipt</span>
+                                        <span *ngIf="item.transactionType == 'sales'" class="tag sales">Sales</span>
+                                        <span *ngIf="item.transactionType == 'purchase'" class="tag purchase">Purchase</span>
+                                        <span *ngIf="item.transactionType == 'payment'" class="tag payment">Payment</span>
+                                        <span *ngIf="item.transactionType == 'receipt'" class="tag recipt">Receipt</span>
                                     </td>
                                     <td>
                                         {{ item.grandTotal }}
